# liTech

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.MD  Doxyfile  Generate.bat  GenerateMake.sh  README.MD  README.md  liTech.sln  premake5.lua
.github/workflows/: build-linux.yml  build-windows.yml  ci.yml
Android/: .gitignore
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/io/listudios/litech/: LiTech.java
Dependencies/Libs/: SDL3.lib  SDL3_test.lib
LiDependencies/: CMakeLists.txt  README.md
LiDependencies/Include/glad/: gl.h
LiDependencies/Lib/: shaderc.lib  shaderc_util.lib  volk.lib
LiDependencies/src/: gl.c
Runner/: Runner.cpp  Runner.vcxproj  Runner.vcxproj.filters  premake5.lua
Runtime/: CMakeLists.txt  main.cpp
android-project/: .gitignore  local.properties
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/res/values/: strings.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
liTechBase/: Assert.cpp  Assert.h  Assertion.cpp  Assertion.h  Bytes.cpp  Bytes.h  Dictionary.h  Hash.cpp  Hash.h  HashMap.h  Lib.h  LinkedList.h  List.h  Mem.cpp  Mem.h  Pair.h  Pool.h  Smart.h  Str.cpp  Str.h  Typedefs.h  liTechBase.vcxproj  liTechBase.vcxproj.filters  premake5.lua
liTechFramework/: CMakeLists.txt  FileSystem.cpp  FileSystem.h  Game.cpp  Game.h  GraphicsContext.cpp  GraphicsContext.h  IFileSystem.h  IInput.h  IManager.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  LocalFileSystem.cpp  LocalFileSystem.h  Mouse.cpp  Mouse.h  PakFile.cpp  PakFile.h  Typedefs.h  liTechFramework.vcxproj  liTechFramework.vcxproj.filters  premake5.lua
liTechFramework/Framework/: Actor.cpp  Actor.h  Scene.h
liTechFramework/Graphics/: Enums.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsObject.cpp  GraphicsObject.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderFactory.cpp  ShaderFactory.h  ShaderProgram.cpp  ShaderProgram.h  Structs.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
liTechFramework/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
liTechFramework/Interfaces/: IComponent.h  IInput.h
liTechFramework/Math/: Geometry.h  Lib.h  Matrices.cpp  Matrices.h  Vectors.cpp  Vectors.h
liTechFramework/Utility/: Alloc.cpp  Alloc.h  Allocator.cpp  Allocator.h  Assert.cpp  Assert.h  Hash.cpp  Hash.h  Heap.cpp  Heap.h  Pool.h  Print.h  Resource.cpp  Resource.h  Stopwatch.cpp  Stopwatch.h
liTechFramework/glad/: gles2.c
src/: DataFileExplorer.cpp  DataFileExplorer.h  MP.cpp  MP.h  Runtime.cpp  Runtime.h  main.cpp  pch.h
src/Engine/Framework/: Asset.cpp  DataFile.cpp  DataFile.h  Game.cpp  Game.h  Material.cpp  SpriteRenderer.cpp  SpriteRenderer.h
src/Engine/Graphics/: PostProcessing.cpp
src/Engine/Math/: Matrices.h
src/Engine/Tools/: DataFile.cpp  DataFile.h  Deserializer.cpp  Deserializer.h  FileIO.cpp  FileIO.h  Serializer.cpp  Serializer.h
src/Engine/Util/: FileIO.cpp
src/Tools/: Components.cpp  Components.h  Editor.cpp  Editor.h
